# django-spaghetti-and-meatballs

./: .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
django_spaghetti/: __init__.py  db.sqlite3  settings.py  urls.py  views.py
django_spaghetti/locale/en/LC_MESSAGES/: django.po
django_spaghetti/locale/fr/LC_MESSAGES/: django.po
django_spaghetti/templates/django_spaghetti/: meatball.html  plate.html
django_spaghetti/tests/: models.py  settings.py  test_it.py  urls.py  wsgi.py
django_spaghetti/tests/templates/tests/: home_plate.html  meatball.html
docs/: Makefile  README.md  conf.py  contributing.rst  customising.rst  index.rst  installing.rst
