[tool.poetry]
name = "django-spaghetti-and-meatballs"
version = "0.3.0"
description = "Its a spicy meatball for serving up fresh hot entity-relationship diagrams straight from your django models."
authors = ["Samuel Spencer <sam@sqbl.org>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
django = ">=2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
testserver = "django-admin runserver 0.0.0.0:8000"