[tool.poetry]
name = "django-spaghetti-and-meatballs"
version = "0.4.0"
description = "Its a spicy meatball for serving up fresh hot entity-relationship diagrams straight from your django models."
authors = ["Samuel Spencer <sam@sqbl.org>"]
license = "MIT License"
packages = [
    { include = "django_spaghetti" },
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
django = ">=2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
